# bioregistry

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  Bioregistry Taxonomy Curation via Wikidata.ipynb  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  Preparing the GO Annotation Database for Integration.ipynb  README.md  Untitled.ipynb  compare.ipynb  docker-compose.yml  justfile  pyproject.toml  results.json  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: add-collection-prefix.yml  add-new-collection.md  add-provider-for-resource.md  merge-two-resources.md  merge.yml  mismatch.yml  new-prefix.yml  new-provider.yml  request-new-prefix.md  update-misc.yml  update-regex.yml  update-regular-expression-pattern.md  update-regular-expression.md
.github/workflows/: deploy.yml  docker.yml  docker_test.yml  health.yml  new_prefix_pr.yml  paper_ranking.yml  release.yml  service_test.yml  test_update.yml  tests.yml  update.yml  update_prefix_cc.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  _config.yml  bulk_prefix_request_template.tsv  comparison.md  conduct.md  curation-blacklisting-external.md  curation-import-external.md  curation.md  datamodel.md  download.md  gbdr.md  glossary.md  health.md  index.md  relevancy_type.md  summary.md  users.md  warnings.md
docs/_data/: bioregistry.jsonld  bioregistry.nt  bioregistry.ttl  bioregistry.xml  bioregistry.yml  collections.tsv  collections.yml  curation.yml  health.tsv  health.yaml  metaregistry.tsv  metaregistry.yml  registry.tsv  registry.yml  usages.yml  warnings.yml
docs/_data/contexts/: obo.context.jsonld  obo_context.jsonld  obo_context_synonyms.jsonld  obo_synonyms.context.jsonld  semweb.context.jsonld  semweb_context.jsonld
docs/guides/: README.md  literature_curation.md  mapping_review.md  organizations.md  providers.md  publications.md
docs/source/: alignment.rst  cli.rst  conf.py  curation.rst  custom.rst  deployment.rst  index.rst  installation.rst  pandas.rst  reference.rst  references.rst  schema.rst  validation-cli.rst
exports/: README.md  countries.tsv
exports/alignment/: aberowl.tsv  agroportal.tsv  bartoc.tsv  biocontext.tsv  biodivportal.tsv  biolink.tsv  bioportal.tsv  cellosaurus.tsv  cheminf.tsv  cropoct.tsv  ecoportal.tsv  edam.tsv  fairsharing.tsv  go.tsv  hl7.tsv  integbio.tsv  lov.tsv  n2t.tsv  ncbi.tsv  ontobee.tsv  pathguide.tsv  prefixcommons.tsv  re3data.tsv  tib.tsv  togoid.tsv  uniprot.tsv  wikidata.tsv  zazuko.tsv
exports/analyses/: README.md  article_curation.tsv
exports/analyses/mapping_checking/: README.md  mapping_embedding_similarities.tsv
exports/analyses/paper_ranking/: README.md  evaluation.tsv  predictions.tsv  predictions_2024-06-11_2024-07-11.tsv  predictions_2024-07-10_to_2024-08-09.tsv  predictions_2024-12-11_to_2025-01-10.tsv
exports/analyses/title_tfidf/: README.md  evaluation.tsv  importances.tsv  predictions.tsv
exports/benchmarks/: README.md  uri_parser_results.txt
exports/collections/: README.md  collections.tsv  collections.yml
exports/contexts/: README.md  bioregistry.context.jsonld  bioregistry.context.ttl  bioregistry.epm.json  bioregistry.rpm.json  bioregistry.ttl  bioregistry_records.json  obo.context.jsonld  obo.context.ttl  obo.epm.json  obo.ttl  obo_synonyms.context.jsonld  obo_synonyms.context.ttl  obo_synonyms.ttl  reverse_prefix_map.json  semweb.context.jsonld  semweb.context.ttl  spar.context.jsonld  spar.context.ttl
exports/geography/: README.md  countries.tsv
exports/metaregistry/: README.md  metaregistry.tsv  metaregistry.yml
exports/ontology/: bioregistry.ofn
exports/raw/: aberowl.json  agroportal.json  biocontext.json  biodivportal.json  bioportal.json  cellosaurus.txt  cropoct.yaml  ecoportal.json  go.yml  miriam.json  n2t.yml  ncbi.html  ols.json  ontobee.html  pathguide.html  prefixcommons.tsv  tib.json  uniprot.json
exports/rdf/: README.md  bioregistry.jsonld  bioregistry.nt  bioregistry.ttl  schema.jsonld  schema.nt  schema.ttl
exports/registry/: README.md  publications.tsv  registry.json  registry.tsv  registry.yml
exports/sssom/: README.md  bioregistry.sssom.tsv  bioregistry.sssom.yml
exports/tables/: comparison_goveranance.tex  comparison_goveranance.tsv  comparison_metadata.tex  comparison_metadata.tsv  summary.tex
notebooks/: Bioregistry Taxonomy Curation via Wikidata.ipynb  Preparing the GO Annotation Database for Integration.ipynb
src/bioregistry/: __init__.py  __main__.py  aggregate.py  align.py  alignment_model.py  apicuron.py  bibliometrics.py  cli.py  collection_api.py  compare.py  constants.py  custom_demo.py  deduplicator.py  ext.py  extras.py  fix_patterns.py  generate_warnings_file.py  github_client.py  how_many_potential_mappings.py  import_prefix.py  license_standardizer.py  lint.py  make_curation_list.py  metaresource_api.py  pandas.py  parse_iri.py  parse_version_iri.py  prefix_maps.py  rdf_serialization.py  record_accumulator.py  reference.py  resolve.py  resolve_identifier.py  resource_manager.py  schema_utils.py  summary.py  ttt.py  upload_ndex.py  uri_format.py  utils.py  (+1 more)
src/bioregistry/align/: __init__.py  (+32 more)
tests/: __init__.py  test_acquisition.py  test_align.py  test_api.py  test_collections.py  test_contexts.py  test_curated_mappings.py  test_curated_papers.py  test_data.py  test_data_slow.py  test_duplicates.py  test_identifiers_org.py  test_indra.py  test_licenses.py  test_manager.py  test_metaregistry.py  test_new_prefix.py  test_obofoundry.py  test_ols.py  test_pandas.py  test_paper_ranking.py  test_reference.py  test_resolve.py  test_sparql.py  test_usages.py  test_utils.py  test_validation.py  test_web.py
tests/extract/: test_uniprot.py
tests/resources/: mock_prefix.py  mock_pubmed_data.json  mock_search.json  ncbiortholog_test.json  vibso_test.json
tests/test_contrib/: __init__.py  test_indra.py  test_sparql.py
tests/test_curation/: __init__.py  test_add_linkml.py
tests/test_struct/: __init__.py  test_reference.py  test_struct.py
tests/test_web/: __init__.py  test_api.py  test_ui.py
(+205 files in other folders)
