##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bioregistry
version = 0.4.64-dev
description = Integrated registry of biological databases and nomenclatures
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/biopragmatics/bioregistry
download_url = https://github.com/biopragmatics/bioregistry/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/bioregistry/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    databases
    biological databases
    biomedical databases

[options]
install_requires =
    requests
    tqdm
    pystow>=0.1.13
    click
    more_click
    pydantic

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    coverage
    pytest
    more_itertools
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    autodoc_pydantic
gha =
    more_itertools
align =
    pyyaml
    beautifulsoup4
    tabulate
    defusedxml
export =
    pyyaml
    rdflib
    rdflib-jsonld
charts =
    matplotlib
    matplotlib_venn
    seaborn
health =
    click_default_group
    pandas
web =
    pyyaml
    rdflib
    rdflib-jsonld
    flask
    flasgger
    bootstrap-flask<=2.0.0
    markdown

[options.entry_points]
console_scripts =
    bioregistry = bioregistry.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bioregistry
omit =
    tests/*
    docs/*
    src/bioregistry/cli.py
    src/bioregistry/__main__.py

[coverage:paths]
source =
    src/bioregistry
    .tox/*/lib/python*/site-packages/bioregistry

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

[mypy]
plugins = pydantic.mypy
