##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bioregistry
version = 0.9.94
description = Integrated registry of biological databases and nomenclatures
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/biopragmatics/bioregistry
download_url = https://github.com/biopragmatics/bioregistry/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/bioregistry/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    databases
    biological databases
    biomedical databases

[options]
install_requires =
    requests
    tqdm
    pystow>=0.1.13
    click
    more_click>=0.1.2
    pydantic<2.0
    curies>=0.5.6

zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    coverage
    pytest
    more_itertools
    httpx
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints==1.21.1
    sphinx_automodapi
    autodoc_pydantic
gha =
    more_itertools
align =
    pyyaml
    beautifulsoup4
    tabulate
    defusedxml
    class-resolver
    fairsharing-client>=0.1.0
export =
    pyyaml
    rdflib
    rdflib-jsonld
    ndex2
charts =
    matplotlib
    matplotlib_venn
    seaborn
    pandas
    jinja2
health =
    click_default_group
    pandas
    tabulate
    pyyaml
    jinja2
web =
    pyyaml
    rdflib
    rdflib-jsonld
    rdflib-endpoint
    flask<2.2.4
    werkzeug<2.3.0
    fastapi
    uvicorn
    bootstrap-flask<=2.0.0
    markdown
    curies[fastapi]

[options.entry_points]
console_scripts =
    bioregistry = bioregistry.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bioregistry
omit =
    tests/*
    docs/*
    src/bioregistry/cli.py
    src/bioregistry/__main__.py

[coverage:paths]
source =
    src/bioregistry
    .tox/*/lib/python*/site-packages/bioregistry

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E203
    W503
    B028  # no quotes in strings
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
per-file-ignores =
    src/bioregistry/app/api.py:B008
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    bioregistry
    tests
